--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "isotope-layout": "^3.0.6",
     "lodash.debounce": "^4.0.8",
