--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,9 @@ debug.log
 # ──────────────────────────────────────────────
 # Environment variables
 # ──────────────────────────────────────────────
-.env
-.env.*
-!.env.example
+# .env
+# .env.*
+# !.env.example
 
 # ──────────────────────────────────────────────
 # OS generated files
